# lotus

./: BUCK  CMakeGraphVizOptions.cmake  CMakeLists.txt  LICENSE  README.md  main.cpp  vcpkg.json
.github/workflows/: tests.yml
Content/shaders/: basic.frag  basic.vert  blue.frag  dynamic.frag  red.frag  texture.frag  texture.vert
cmake/: toolchain.cmake
games/: CMakeLists.txt
games/Breakout/: CMakeLists.txt  main.cpp
games/brick-breaker/: CMakeLists.txt
include/lotus/: GameLoop.h  GameObject.h  RenderManager.h  State.h  base.h  game.h  mesh_engine.h  programs.h  render.h
lotus/: CMakeLists.txt
lotus/include/lotus/: BallObject.h  Game.h  GameLevel.h  GameLoop.h  GameObject.h  RenderManager.h  ResourceManager.h  Shader.h  SpriteRenderer.h  State.h  Texture.h  base.h  render.h
lotus/interface/: Game.ixx  GameLoop.ixx  GameObject.ixx  RenderManager.ixx  ResourceManager.ixx  Shader.ixx  State.ixx  Texture_impl.ixx  base.ixx  lotus.ixx  mesh_engine.ixx  programs.ixx  render.ixx
lotus/src/: BallObject.cpp  Game.cpp  GameLevel.cpp  GameLoop.cpp  GameLoop_impl.cpp  GameObject.cpp  Game_impl.cxx  RenderManager.cpp  RenderManager_impl.cpp  ResourceManager.cpp  ResourceManager_impl.cxx  Shader.cpp  Shader_impl.cxx  SpriteRenderer.cpp  Texture.cpp  Texture_impl.cxx  playground.cpp  programs.cpp  programs_impl.cpp  render.cpp  render_impl.cpp
src/: GameLoop.cpp  RenderManager.cpp  State.cpp  game.cpp  lotus.cpp  main.cpp  programs.cpp  render.cpp
src/shaders/: basic.frag
toolchains/: BUCK
